re-add release notes about performance improvements
- removed by ffc7cac
- added first by e944fa0f

+review REVIEW-5623