@@ -173,6 +173,23 @@ Clients of the Tooling API now can query the list of Eclipse builders and nature
 and `EclipseProject.getBuildCommands()` contain the builders and natures required for the target project as well as the customisation defined the
 'eclipse' <a href="dsl/org.gradle.plugins.ide.eclipse.model.EclipseProject.html">Gradle plugin configuration</a>.
 
+### Performance improvements in up-to-date checking
+
+TBD
+
+Gradle will use the Java nio2 API to access directories on Java 7+ and when the default encoding is unicode compatible (f.e. utf-8).
+The reason for restricting the use to unicode encoding is that tests for GRADLE-2181 break when nio2 API is used to read file names that contain multi-byte characters when default encoding isn't unicode compatible.
+
+Windows has the default encoding of Cp1252 for most environments and it requires manual configuration to use the faster Java nio2 directory accessing on Windows platforms.
+This can be done in the `gradle.properties` file as follows:
+```
+org.gradle.jvmargs=-Dfile.encoding=UTF-8 -Xmx1024m -XX:MaxPermSize=256m -XX:+HeapDumpOnOutOfMemoryError
+```
+
+The benefit of using Java nio2 API to access directories is that file metadata (file size, last modification time) is read with a single system call.
+This information is already read while walking the directory tree and it can now be passed on to up-to-date checking without re-reading the information.
+
+
 ## Promoted features
 
 Promoted features are features that were incubating in previous versions of Gradle but are now supported and subject to backwards compatibility.
